--- a/backend/package.json
+++ b/backend/package.json
@@ -22,7 +22,8 @@
     "morgan": "^1.10.1",
     "multer": "^2.0.2",
     "multer-storage-cloudinary": "^4.0.0",
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "socket.io": "^4.8.1"
   },
   "keywords": [],
   "author": "",
